--- a/Bestiary/SizeBestiary.html
+++ b/Bestiary/SizeBestiary.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body>
-<nav> <a href="../Homepage.html">Home</a> |Bestiary |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../index.html">Home</a> |Bestiary |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
 <h1>Ere's Bestiary</h1>
 <p><u>NOTE: DO NOT USE THIS TO METAGAMING. THIS IS FOR IMMERSIVE FUN, AND FOR A QUICK ACCESS GUIDE FOR BOTH THE DM, AND FOR ANYONE WHO SUMMONS/TAMES CREATURES.</u> Click on a heading to change how the table is sorted.</p>
   <!-- Calls the tableSort function-->
