--- a/Equipment/Equipment.html
+++ b/Equipment/Equipment.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body>
-<nav> <a href="../Homepage.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |Equipment |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../index.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |Equipment |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
 <h1>Equipment</h1>
 <h2>Coming Soon&#8482;</h2>
 </body>
