--- a/Feats/Feats.html
+++ b/Feats/Feats.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body>
-<nav> <a href="../Homepage.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |Feats</nav>
+<nav> <a href="../index.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |Feats</nav>
 <h1>Feats</h1>
 <h2>Coming Soon&#8482;</h2>
 </body>
