--- a/Magical_Items/Magical_Item_Rarity.html
+++ b/Magical_Items/Magical_Item_Rarity.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body>
-<nav> <a href="../Homepage.html">Home</a> |<a href="../Homepage.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |Magical Items |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../index.html">Home</a> |<a href="../Homepage.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |Magical Items |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
 <h1>Magical Items</h1>
 <h2>This page will be updated as the party acquires/learns about more magical items<br><br></h2>
   <!-- Calls the tableSortMagicItems function-->
