--- a/Spells/Spell_School.html
+++ b/Spells/Spell_School.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body id="SpellBody">
-<nav> <a href="../Homepage.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |Spells |<a href="../Feats/Feats.html">Feats</a> </nav>
+<nav> <a href="../index.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |<a href="../World/Locations.html">Locations</a> |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |Spells |<a href="../Feats/Feats.html">Feats</a> </nav>
 <h1 id="Spells">Spells</h1>
 <h2>More spells will be added over time and as the party levels up<br>
   <br>
