--- a/World/Locations.html
+++ b/World/Locations.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../CCS/mystyle.css">
 </head>
 <body id="WorldBody">
-<nav> <a href="../Homepage.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../index.html">Home</a> |<a href="../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../Equipment/Equipment.html">Equipment</a> |<a href="../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../Spells/Spells.html">Spells</a> |<a href="../Feats/Feats.html">Feats</a></nav>
 <h1>The World of Aulter</h1>
 <h2>The Continent of Moubinia</h2>
 <div class="MapImage"><a href="MoubiniaLarge.webp" target="_blank"><img src="Moubinia.webp" width="761" height="479" class="DesktopMap" alt="Moubinia" a href="MoubiniaLarge.webp"></a></div>
