--- a/World/Inenian_Tetrarchy/Island_of_Ablia.html
+++ b/World/Inenian_Tetrarchy/Island_of_Ablia.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../../CCS/mystyle.css">
 </head>
 <body id="LocationInformationBody">
-<nav> <a href="../../Homepage.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../../index.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
 <h1>The Island of Ablia</h1>
 <p class="DescriptionText">A mysterious moving island, home to the Neyme people. Undetectable due to transmutation magic, this island dissapeared over 1,000 years ago to escape an ancient war known as The Great Unraveling War.</p>
 <h2>Places of Interest</h2>
