--- a/World/Inenian_Tetrarchy/Inenian_Tetrarchy_Waters.html
+++ b/World/Inenian_Tetrarchy/Inenian_Tetrarchy_Waters.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../../CCS/mystyle.css">
 </head>
 <body id="WorldBody">
-<nav> <a href="../../Homepage.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../../index.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
 <h1>Inenian Tetrarchy Waters</h1>
 <p class="DescriptionText">Unlike the port city of Inen, the open waters surrounding the tetrarchy are dangerous, rough, and unforgiving. Home to many creatures and monsters such as <a href="../../Bestiary/Creatures/Merrow/Merrow.html" target="_blank">merrows</a>, traversing the waves alone is ill advised, and could very well result in death.</p>
 <h2>Visited Locations</h2>
