--- a/World/Inenian_Tetrarchy/Inenian_Tetrarchy.html
+++ b/World/Inenian_Tetrarchy/Inenian_Tetrarchy.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../../CCS/mystyle.css">
 </head>
 <body id="InenianTetrarchyBody">
-<nav> <a href="../../Homepage.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a>  |<a href="../../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../../index.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a>  |<a href="../../Feats/Feats.html">Feats</a></nav>
 <h1>The Inenian Tetrarchy</h1>
 <div class="InenianImage"><img src="Inenian_Tetrarchy.webp" width="644" height="588" class="DesktopMap" alt="Inenian Tetrarchy"></div>
 <div class="InenianImageMobile"><img src="Inenian_Tetrarchy_Smol.webp" width="258" height="236" class="MobileMap" alt="Inenian Tetrarchy"></div>
