--- a/World/Inenian_Tetrarchy/Inen.html
+++ b/World/Inenian_Tetrarchy/Inen.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../../CCS/mystyle.css">
 </head>
 <body id="LocationInformationBody">
-<nav> <a href="../../Homepage.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
+<nav> <a href="../../index.html">Home</a> |<a href="../../Bestiary/DefaultBestiary.html">Bestiary</a> |Locations |<a href="../../Equipment/Equipment.html">Equipment</a> |<a href="../../Magical_Items/Magical_Items.html">Magical Items</a> |<a href="../../Spells/Spells.html">Spells</a> |<a href="../../Feats/Feats.html">Feats</a></nav>
 <h1>The Capital of Inen</h1>
 <p class="DescriptionText">A sprawling port city, Inen is known for its diverse market, advance harbor, and acclaimed adventurer's guild. Being the capital of the Inenian Tetrarchy, Inen sports a large guard presence. Combined with the adventurer's guild, Inen is considered a safe place to work and live.</p>
 <h2>Places of Interest</h2>
